--- a/address_book/templates/add_address.html
+++ b/address_book/templates/add_address.html
@@ -2,4 +2,43 @@
 
 {% block content %}
 	<h1> Add Address </h1>
+<br/>
+	<form method="POST">
+		{% csrf_token %}
+	 
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Full Name" name="name">
+	  </div>
+
+
+	  <div class="mb-3">
+	    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email Address" name="email">
+	  
+	  </div>
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Phone Number" name="phone">
+	  </div>
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Address" name="address">
+	  </div>
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="City" name="city">
+	  </div>
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="State" name="state">
+	  </div>
+
+	  <div class="mb-3">
+	    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Zip Code" name="zipcode">
+	  </div>
+
+
+<br/>
+	  <button type="submit" class="btn btn-secondary">Add Address</button>
+	</form>
 {% endblock %}
