--- a/address_book/templates/base.html
+++ b/address_book/templates/base.html
@@ -31,12 +31,21 @@
     </div>
   </div>
 </nav>
-
+	
 
   </br>
   	<div class="container">
-    	{% block content %}
-		{% endblock %}
+	  	{% if messages %}
+			{% for message in messages %}
+				<div class="alert alert-warning alert-dismissable" role="alert">
+
+					{{ message }}
+				</div>
+			{% endfor %}
+
+		{% endif %}
+	    	{% block content %}
+			{% endblock %}
 	</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
